[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'dex-xcmp'
repository = 'https://github.com/substrate-developer-hub/substrate-pallet-template/'
version = '2.0.0-rc5'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.cumulus-message-broker]
git = "https://github.com/paritytech/cumulus"
default-features = false
rev = '96da14c14fb785e106bb89a18c9dedaf2f789d2c'

[dependencies.cumulus-upward-message]
git = "https://github.com/paritytech/cumulus"
default-features = false
rev = '96da14c14fb785e106bb89a18c9dedaf2f789d2c'

[dependencies.cumulus-primitives]
git = "https://github.com/paritytech/cumulus"
default-features = false
rev = '96da14c14fb785e106bb89a18c9dedaf2f789d2c'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "rococo-branch"

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "rococo-branch"

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "rococo-branch"

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "rococo-branch"

[dependencies.sp-std]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
branch = "rococo-branch"

[dependencies.generic-asset]
git = 'https://github.com/paritytech/substrate.git'
package = "pallet-generic-asset"
default-features = false
branch = "rococo-branch"

[dependencies.polkadot-parachain]
git = "https://github.com/paritytech/polkadot"
branch = "rococo-branch"
default-features = false

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-runtime/std',
]
